see #973: modal body overflow css fix

--- a/src-js/webpack/src/faq/blocks/wl-modal/wl-modal-body/index.scss
+++ b/src-js/webpack/src/faq/blocks/wl-modal/wl-modal-body/index.scss
@@ -1,4 +1,4 @@
 .wl-modal-body {
   overflow-y: scroll;
-  height: 90%;
+  height: 80%;
 }
